authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-service
  namespace: authentik
spec:
  selector:
    app: authentik
  ports:
    - name: http
      port: 9000
      targetPort: 9000
