authentik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.cgraaaj.in`)
      kind: Rule
      services:
        - name: authentik-service
          port: 9000
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: authentik-cgraaaj-in-tls
